[package]
name = "las_trimmer"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0.16"
clap = { version = "4.5.18", features = ["derive"] }
crossbeam = "0.8.4"
las = { version = "0.9.1", features = ["laz-parallel"] }
num-format = "0.4.4"
num_cpus = "1.16.0"
predicates = "3.1.2"
tempfile = "3.12.0"
thiserror = "1.0.63"
threadpool = "1.8.1"
